--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "webpack-dev-server": "^4.11.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "webpack serve --mode developmet"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +54,7 @@
     "sass": "^1.59.2",
     "sass-loader": "^13.2.0",
     "webpack": "^5.76.1",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
